@@ -385,11 +385,7 @@ class AddTorrentDialog(component.Component):
         self.options[torrent_id] = options
 
         # Save the file priorities
-        (model, srow) = self.listview_torrents.get_selection().get_selected()
-        if srow and model[srow][0] != torrent_id:
-            files_priorities = [1] * len(self.files[torrent_id])
-        else:
-            files_priorities = self.build_priorities(
+        files_priorities = self.build_priorities(
                                 self.files_treestore.get_iter_first(), {})
 
         if len(files_priorities) > 0:
