@@ -1,6 +1,7 @@
 Deluge 1.1.4 - (In Development)
  GtkUI:
   * Fix hiding bottom pane when no tabs are enabled upon restart
+  * Fix saving file priorities when switching torrents in the addtorrentdialog
 
 Deluge 1.1.3 - (15 February 2009)
  Core:
